--- a/icon.dust
+++ b/icon.dust
@@ -4,5 +4,8 @@
     {?dynamic}data-adaptivejs-component="stencil-icon"{/dynamic}
 >
     {?title}<title>{title}</title>{/title}
-    <use xlink:href="#{?set}{set}{:else}icon{/set}-{name}"></use>
+    <use xlink:href="#{name}"></use>
 </svg>
+
+{! Usage in other components will use `default` namespace? !}
+{! {@c-icon name="default-plus" /} !}
